Pruebas por medio de postman swagger mal formados, y facilidad de collection
